# wingpanel-more

./: AUTHORS  CMakeLists.txt  COPYRIGHT  desktop.pantheon.wingpanel.gschema.xml  org.elementary.wingpanel.gschema.xml  org.pantheon.desktop.wingpanel-more.gschema.xml  org.pantheon.desktop.wingpanel.gschema.xml
data/: CMakeLists.txt  gtk-theme-style.css  wingpanel-hud-style.css  wingpanel-more.desktop  wingpanel.desktop
data/style/: default.css  wingpanel-hud-style.css
debian/: control  rules
po/: CMakeLists.txt  af.po  am.po  ar.po  ast.po  be.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fy.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  mg.po  (+32 more)
src/: CMakeLists.txt  IndicatorIface.vala  IndicatorLoader.vala  IndicatorModel.vala  IndicatorWidget.vala  Panel.vala  Settings.vala  Utils.vala  WingpanelApp.vala  cardapio.vala  wingpanel-indicator-file-model.vala  wingpanel-object-entry.vala  wingpanel-panel.vala
src/Indicator/: IndicatorFactory.vala  IndicatorFileModel.vala  IndicatorObject.vala  IndicatorObjectEntry.vala
src/Services/: AppLauncherService.vala  BackgroundManager.vala  EndSessionDialog.vala  IndicatorFactory.vala  IndicatorFileModel.vala  IndicatorObject.vala  IndicatorSorter.vala  LauncherRunner.vala  Settings.vala  WingpanelObjectEntry.vala
src/Widgets/: AppsButton.vala  BasePanel.vala  IndicatorButton.vala  IndicatorMenubar.vala  IndicatorObjectEntry.vala  MenuBar.vala  Panel.vala  PanelShadow.vala  StyleClass.vala
vapi/: indicator-0.4.vapi  indicator.vapi  indicators-gtk.vapi  libido3-0.1.vapi
